--- a/css/yetis.webflow.css
+++ b/css/yetis.webflow.css
@@ -34,8 +34,17 @@ p {
 #main-yeti {
 	float: left; 
     margin: 10px;
+	border: 3px solid white;
 }
 
+#logo {
+	position: absolute;
+    display: inline;
+    text-align: center;
+    top: 19px;
+    left: 17px;
+	width: 10vw;
+}
 
 
 .body {
@@ -55,6 +64,19 @@ p {
 	grid-template-areas: "Area Area";
 	-ms-grid-columns: 1fr 1fr 1fr 1fr 1fr;
 	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+	-ms-grid-rows: auto;
+	grid-template-rows: auto
+}
+
+.grid-header {
+	justify-items: center;
+	-webkit-box-align: center;
+	-webkit-align-items: center;
+	-ms-flex-align: center;
+	align-items: center;
+	grid-template-areas: "Area Area";
+	-ms-grid-columns: 1fr 1fr 1fr 1fr;
+	grid-template-columns: 1fr 1fr 1fr 1fr;
 	-ms-grid-rows: auto;
 	grid-template-rows: auto
 }
@@ -370,6 +392,7 @@ p {
 }
 
 @media screen and (max-width: 1000px) {
+
 	.grid {
 	    grid-template-areas:
 	        "Area Area"
@@ -399,9 +422,16 @@ p {
 	}
 
 	#main-yeti{
-		width: 700px;
-		height:  700px;
+		width: 90vw;
+		margin-left: 5vw;
+		margin-right: 5vw;
+		border: 3px solid white;
 	}
+
+	#roadmap, #team, #inner-roadmap, #faq {
+		padding: 5px;
+	}
+
 	.fall {
 		visibility: hidden;
 	}
@@ -584,11 +614,50 @@ p {
 }
 
 
+@media screen and (max-width:1200px) {
+	.grid-header {
+		justify-items: center;
+		-webkit-box-align: center;
+		-webkit-align-items: center;
+		-ms-flex-align: center;
+		align-items: center;
+		grid-template-areas: "Area Area";
+		-ms-grid-columns: 1fr 1fr;
+		grid-template-columns: 1fr 1fr;
+		-ms-grid-rows: auto;
+		grid-template-rows: auto
+	}
+}
+
 @media screen and (max-width:991px) {
+	#logo {
+		position: initial;
+		display: block;
+		text-align: center;
+		width: 50vw;
+		margin: auto;
+		padding-top: 10px;
+	}
+
+	.hide-on-mobile {
+        display: none !important;
+    }
+
+	#about {
+		padding: 0;
+	}
+
 	.header {
+		padding-top: 10px;
 		padding-right: 40px;
 		padding-left: 40px
 	}
+
+	.header-menu {
+		font-size: 25px;
+		margin-bottom: 10px;
+	}
+
 	.description-container {
 		padding-right: 40px;
 		padding-left: 40px
