--- a/css/yetis.webflow.css
+++ b/css/yetis.webflow.css
@@ -266,9 +266,10 @@ p {
 }
 
 .footer-section {
-	float: right;
-	padding-right: 50px;
-	padding-bottom: 20px;
+	margin: auto;
+	padding: 5px;
+	width: 100%;
+	text-align: center;
 }
 
 .center-div {
@@ -422,14 +423,21 @@ p {
 	}
 
 	#main-yeti{
-		width: 90vw;
-		margin-left: 5vw;
-		margin-right: 5vw;
+		width: 90%;
+		margin-left: 5%;
+		margin-right: 5%;
 		border: 3px solid white;
 	}
 
 	#roadmap, #team, #inner-roadmap, #faq {
 		padding: 5px;
+	}
+
+	.footer-section {
+		margin: auto;
+		padding: 5px;
+		width: 100%;
+		text-align: center;
 	}
 
 	.fall {
