--- a/css/plasma.css
+++ b/css/plasma.css
@@ -47,6 +47,10 @@ h1, h2 {
     width: 39vw;
 }
 
+.plasma-balance-container .button:hover {
+    background-color: #f0fcff;
+}
+
 #your-plasma-container {
     margin-right: 2vw;
 }
@@ -111,7 +115,7 @@ h1, h2 {
     width: 100%;
     text-decoration: none;
     height: 5%;
-    background-color: white;
+    background-color: #D3F6FF;
     border: solid black .3em;
     color: black;
     font-size: 1vw;
@@ -125,7 +129,7 @@ h1, h2 {
 }
 
 #error-popup, #status-popup {
-	background-color: rgba(0, 11, 89);
+	background-color: rgba(0,0,0);
     z-index: 99999;
     position:fixed;
     top:50%;
