--- a/css/plasma.css
+++ b/css/plasma.css
@@ -15,6 +15,8 @@ h1, h2 {
     margin:auto;
     text-align: center;
     width: 55%;
+    font-size: 1.4vw;
+    line-height: 1.4vw;
 }
 
 #plasma-balances {
@@ -252,6 +254,8 @@ h1, h2 {
         margin:auto;
         text-align: center;
         width: 95%;
+        font-size: 2.5vh;
+        line-height: 2.5vh;
     }
 
     .plasma-balance-container {
