--- a/css/index.css
+++ b/css/index.css
@@ -19,3 +19,13 @@
 
 }
 
+@keyframes blinker {
+    50% {
+      opacity: 0;
+    }
+}
+
+.blinking {
+    animation: blinker 1.6s linear infinite;
+}
+
