start on cyborgs

--- a/css/yetis.webflow.css
+++ b/css/yetis.webflow.css
@@ -75,8 +75,8 @@ p {
 	-ms-flex-align: center;
 	align-items: center;
 	grid-template-areas: "Area Area";
-	-ms-grid-columns: 1fr 1fr 1fr 1fr;
-	grid-template-columns: 1fr 1fr 1fr 1fr;
+	-ms-grid-columns: 1fr 1fr 1fr 1fr 1fr;
+	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 	-ms-grid-rows: auto;
 	grid-template-rows: auto
 }
