--- a/css/fusion.css
+++ b/css/fusion.css
@@ -4,6 +4,11 @@
 	src: URL('../css/CursedTimerUlil-Aznm.ttf') format('truetype');
 }
 
+@font-face {  
+	font-family: 'Retro';
+	src: URL('../css/strasua.ttf') format('truetype');
+}
+
 h1, h2 {
     margin-top: 0;
 }
@@ -113,6 +118,8 @@ h2 {
     margin: auto;
     text-align: center;
     min-height:40vh;
+    background-color: #2f4353;
+    background-image: linear-gradient(315deg, #2f4353 0%, #d2ccc4 74%);
 }
 
 #available-dragon-images, #available-elder-images, #available-baby-images {
@@ -220,9 +227,83 @@ h2 {
   }
 
 
-/*breed stuff*/
+/*fusion control stuff*/
 
-#your-dragon-section {
+:root {
+    
+    /* Set neon color */
+    --neon-text-color: #f40;
+    --neon-border-color: #08f;
+  }
+  
+  #fusion-header-text{
+    font-style: italic;
+    color: #fff;
+    padding: 1vw;
+    border: 0.4rem solid #fff;
+    border-radius: 2rem;
+    text-transform: uppercase;
+    animation: flicker2 1.5s infinite alternate; 
+    background-color: #2f4353;
+  
+  }
+  
+  #fusion-header-text::-moz-selection {
+    background-color: var(--neon-border-color);
+    color: var(--neon-text-color);
+  }
+  
+  #fusion-header-text::selection {
+    background-color: var(--neon-border-color);
+    color: var(--neon-text-color);
+  }
+  
+  #fusion-header-text:focus {
+    outline: none;
+  }
+  
+  /* Animate neon flicker */
+  @keyframes flicker2 {
+      
+      0%, 19%, 21%, 23%, 25%, 54%, 56%, 100% {
+        
+          text-shadow:
+              -0.2rem -0.2rem 1rem #fff,
+              0.2rem 0.2rem 1rem #fff,
+              0 0 2rem var(--neon-text-color),
+              0 0 4rem var(--neon-text-color),
+              0 0 6rem var(--neon-text-color),
+              0 0 8rem var(--neon-text-color),
+              0 0 10rem var(--neon-text-color);
+          
+          box-shadow:
+              0 0 .5rem #fff,
+              inset 0 0 .5rem #fff,
+              0 0 2rem var(--neon-border-color),
+              inset 0 0 2rem var(--neon-border-color),
+              0 0 4rem var(--neon-border-color),
+              inset 0 0 4rem var(--neon-border-color);        
+      }
+      
+      20%, 24%, 55% {        
+          text-shadow: none;
+          box-shadow: none;
+      }    
+  }
+
+/* #fusion-header {
+    text-align: center;
+    font-family: 'Retro';
+    letter-spacing: 5px;
+    color:red;
+}
+
+#fusion-header-text {
+    background-color: black;
+    padding: 10px;
+} */
+
+#your-dragon-section-inner {
     display: flex;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
@@ -292,13 +373,62 @@ h2 {
 #fusion-controls {
     width: 40%;
     font-family: 'LED';
+    background-size: cover;
+    padding: 1.3vw;
 }
+
 
 #fusion-display {
     border:3px solid white;
-    padding: 20px;
-    margin: 10px;
+    padding: 1vw;
+    margin: 1vw;
+    margin-left: 0;
+    margin-right: 0;
     background-color: rgba(14, 77, 14, 0.438);
+}
+
+#fusion-panel {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+}
+
+#fusion-panel p {
+    font-size: 1vw;
+    color: white;
+    text-align: center;
+    background-color: #2f4353;
+    margin: 8%
+}
+
+#fusion-panel button {
+    border-radius: 50%;
+}
+
+.indicator button:hover {
+    cursor: default;
+}
+
+.indicator {
+    text-align: center;
+    width: 40%;
 }
 
 .tribute {
@@ -312,11 +442,13 @@ h2 {
 }
   
 .tribute img {
-    border: solid 5px white;
+    border: outset 20px rgb(92, 100, 107);
     width: 100%;
     height: 100%;
     /* backdrop-filter: blur(5px); */
 }
+
+/* CRT effect code courtesy of http://aleclownes.com/2017/02/01/crt-display.html */
 
 @keyframes flicker {
     0% {
@@ -479,6 +611,8 @@ h2 {
     animation: textShadow 1.6s infinite;
   }
 
+/* end CRT effect */
+
 .selected {
     color: red;
 }
@@ -596,6 +730,35 @@ h2 {
     font-size: 1.5vw;
   }
 
+  /* end fusion control stuff*/
+
+  #error-popup, #status-popup {
+	background-color: rgba(0,0,0);
+    z-index: 99999;
+    position:fixed;
+    top:50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 53vw;
+    height: 35vh;
+    border: solid .3em white;
+    border-radius: .2em;
+    text-align: center;
+    box-shadow: 0 0 5000px 5000px rgba(0,0,0,0.88);
+}
+
+#error-popup p, #status-popup p {
+    width: 100%;
+    font-size: 3vw;
+    line-height: 3vw;
+    position: absolute;
+    color: white;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
 @media screen and (max-width: 991px) {
 
     .tribute {
@@ -604,8 +767,13 @@ h2 {
         text-align: center;
     }
 
-    #select-tributes-button, #burn-button {
+    #select-tributes-button {
         width: 93%;
+    }
+
+    #burn-button {
+        width: 20vh;
+        height: 20vh;
     }
 
     #tributes, #fusion-controls {
