--- a/css/plasma.css
+++ b/css/plasma.css
@@ -293,6 +293,7 @@ h1, h2 {
     .plasma-balance-container button, #migration-section button {
         width: 95%;
         font-size: 2.5vh;
+        padding: 15px;
     }    
 
     #your-plasma-container {
