--- a/css/fusion.css
+++ b/css/fusion.css
@@ -203,6 +203,18 @@ h2 {
     font-family: 'Retro';
 }
 
+#fusion-header-gif {
+    border-radius: 30px;
+    width: 45%;
+    box-shadow:
+    0 0 .5rem #fff,
+    inset 0 0 .5rem #fff,
+    0 0 2rem var(--neon-border-color),
+    inset 0 0 2rem var(--neon-border-color),
+    0 0 4rem var(--neon-border-color),
+    inset 0 0 4rem var(--neon-border-color);        
+}
+
 #fusion-header-text::-moz-selection {
     background-color: var(--neon-border-color);
     color: var(--neon-text-color);
@@ -905,6 +917,12 @@ h2 {
     button {
         font-size: 1.7vh !important;
         line-height: 1.7vh !important;
+    }
+
+    #fusion-header-gif {
+        border-radius: 30px;
+        width: 95%;
+        margin-bottom: 10px;
     }
 
     #fusion-header-text {
