--- a/css/fusion.css
+++ b/css/fusion.css
@@ -829,11 +829,11 @@ h3 {
     .increment-button {
         /* height: 6vh !important;
         width: 6vh !important; */
-        height: 50px !important;
-        width: 50px !important;
+        height: 60px !important;
+        width: 60px !important;
         border-width: .5vh;
-        font-size:4vh !important;
-        line-height:4vh !important;
+        font-size:3.5vh !important;
+        line-height:3.5vh !important;
     }
 
     .increment-button:hover {
@@ -868,10 +868,16 @@ h3 {
         width: 93%;
     }
 
+    .indicator {
+        width: 50%;
+    }
+
     .indicator p {
         font-size: 2.1vh;
-        line-height: 2.1vh;
+        line-height: 2.3vh;
         padding: 10px;
+        padding-right: 20px;
+        padding-left: 20px;
         border-width: .3vh;
     }
 
