--- a/css/fusion.css
+++ b/css/fusion.css
@@ -901,8 +901,8 @@ h3 {
     }
 
     #fuse-button {
-        width: 12vh;
-        height: 12vh;
+        width: 100px;
+        height: 100px;
         font-size: 2.5vh !important;
         border-width: 1vh;
         padding: 10px !important;
